# RawCode

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix  pnpm-lock.yaml
.direnv/: flake-profile-1-link  flake-profile-2-link
.github/workflows/: ci.yaml
crates/app_core/: Cargo.toml
crates/catalog_core/: Cargo.toml
crates/edit_core/: Cargo.toml
crates/raw_engine/: Cargo.toml
docs/: dev-workflow.md  external-design.md  internal-design.md  requirements.md
frontend/: package.json
src-tauri/: Cargo.toml  tauri.conf.json
